@@ -42,6 +42,15 @@
     </listitem>
 -->
     <listitem>
+      <para>January 5th, 2018</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Add lightdm.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>January 4th, 2018</para>
       <itemizedlist>
         <listitem>
