@@ -588,6 +588,8 @@ to avoid building libxml2 twice, which is slow with all deps -->
 <!ENTITY qt5-dir                      "$QT5DIR">
 
 <!-- Chapter 26 -->
+<!ENTITY lightdm-version              "1.24.0">
+<!ENTITY lightdm-gtk-greeter-version  "2.0.3">
 <!ENTITY lxdm-version                 "0.5.3">
 <!ENTITY sddm-version                 "0.16.0">
 
