@@ -111,6 +111,7 @@
         <row><entry>wireshark</entry><entry> </entry><entry>62</entry></row>
         <row><entry>lightdm </entry><entry>63</entry><entry>63</entry></row>
         <row><entry>sddm    </entry><entry>64</entry><entry>64</entry></row>
+        <row><entry>lightdm </entry><entry>65</entry><entry>65</entry></row>
         <row><entry>scanner </entry><entry>  </entry><entry>70</entry></row>
         <row><entry>colord  </entry><entry>71</entry><entry>71</entry></row>
 
