@@ -61,6 +61,7 @@
 
   </sect1>
 
+  <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="lightdm.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="lxdm.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="sddm.xml"/>
 
