@@ -1,8 +1,10 @@
-2014-07-20 Armin K. <krejzi@email.com>
-   * Import first revision of the standalone
-     units package.
+2018-01-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Add lightdm service.
 
 2016-03-07 DJ Lucas <dj@higgs.linuxfromscratch.org>
    * Add samba service.
 
+2014-07-20 Armin K. <krejzi@email.com>
+   * Import first revision of the standalone
+     units package.
 
