@@ -1,3 +1,6 @@
+2018-01-05  Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Add lightdm bootscript
+
 2017-07-31  Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Delete references to rpc.rquotad in nfs-server script
 
